Works with previous fix, but changed centre to center since the text was aligned yet

--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -4,5 +4,5 @@
     background-color: yellow;
     color: red;
     font-size: 20px;
-    text-align: centre;
+    text-align: center;
 }
